--- a/BlazorApp1/Pages/Home.razor
+++ b/BlazorApp1/Pages/Home.razor
@@ -2,10 +2,22 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>John Rey S. Tolosa</h1>
+@code {
+   
+}
+@{
+	var Name = "One-Stop Web App";
+}
 
-<div>
+
+<div class="centered-container text-center" >
+
+	    <h1>@Name</h1>
+
+        <p class="datetime">The website that houses all your productivity needs.</p>
+
+		<button id="Button2" class="Button2">Get Started</button>
 
 </div>
 
-Welcome to your new app.
+
