--- a/BlazorApp1/Layout/MainLayout.razor
+++ b/BlazorApp1/Layout/MainLayout.razor
@@ -24,19 +24,34 @@
 }
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+    @* <div class="sidebar"> *@
+    @*     <NavMenu /> *@
+    @* </div> *@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <div class="navbar">
+                <!-- Logo Section -->
+                <div class="logo-container">
+                    <img src="/logo.png" alt="One-Stop Web App" class="logo" />
+                </div>
 
-			<div class="centered-container align-items-center">
-				<h5 class="datetime fw-bolder">@currentTime</h5>
-			</div>
+                <!-- Links Section -->
+                <div class="links-container">
+                    <a href="">Home</a>
+                    <a href="notes">Notes</a>
+                    <a href="todo">To-Do List</a>
+                    <a href="calculator">Calculator</a>
+                    <a href="weather">Weather</a>
+                    <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+                    <a href="mailto:jrtolosa@gbox.ncf.edu.ph" target="_blank">Contact</a>
+                </div>
+
+                <!-- DateTime Section -->
+                <div class="datetime-container">
+                    <h5 class="datetime fw-bolder">@currentTime</h5>
+                </div>
+            </div>
         </div>
 
         <article class="content px-4">
