One stop home layout

--- a/BlazorApp1/Layout/MainLayout.razor
+++ b/BlazorApp1/Layout/MainLayout.razor
@@ -58,4 +58,11 @@
             @Body
         </article>
     </main>
+
 </div>
+
+<footer>
+    <div class="footer-container">
+        <p>&copy; 2025 - One-Stop Web App</p>
+    </div>
+</footer>
