--- a/BlazorApp1/Pages/Home.razor
+++ b/BlazorApp1/Pages/Home.razor
@@ -26,20 +26,17 @@
 
 		<!--when button is clicked, scroll down to another section-->
 	<button id="Button2" class="Button2" onclick=" () => ScrollToSection(" featured-tools")">Get Started</button>
-
 	
 </div>
 
-<img src="/downarrow.png" alt="Down" class="down-arrow" />
-
-<section id="featured-tools">
-	<div class="container">
+<section id="featured-tools" class="featured-tools">
+	<div class="container align-items-center">
 
 		<h2 class="text-center">Featured Tools</h2>
 		<p class="text-center">Explore our productivity tools and start getting things done.</p>
 
 		<div class="row">
-			<div class="col-md-4">
+			<div class="col-md-3">
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">Sticky Notes</h5>
@@ -48,7 +45,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-3">
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title
@@ -58,7 +55,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-3">
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title
@@ -67,6 +64,20 @@
 						</h5>
 						<p class="card-text">Perform basic and advanced calculations with our calculator feature. Solve math problems, convert units, and more.</p>
 						<a href="calculator" class="btn btn-primary">Go to Calculator</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title
+						">
+							Weather
+						</h5>
+						<p class="card-text">
+							Stay informed about the weather conditions in your area with our weather feature. Check the current temperature, humidity, and more.
+						</p>
+						<a href="calculator" class="btn btn-primary">Go to Weather</a>
 					</div>
 				</div>
 			</div>
