--- a/BlazorApp1/Layout/MainLayout.razor.css
+++ b/BlazorApp1/Layout/MainLayout.razor.css
@@ -131,3 +131,13 @@ a:active, a:visited, a:link {
     margin: 0; /* Remove any default margin */
    
 }
+
+.footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f7f7f7;
+    border-top: 1px solid #d6d5d5;
+    height: 5rem;
+    width: 100%;
+}
