One Stop Notes aand To-Do 80%

--- a/BlazorApp1/Layout/MainLayout.razor.css
+++ b/BlazorApp1/Layout/MainLayout.razor.css
@@ -10,11 +10,12 @@ main {
 
 a {
     font-family: 'Poppins', sans-serif;
+    color: darkslateblue;
 }
 
 a:active, a:visited, a:link {
     text-decoration-line: underline;
-    color: #007bff;
+    color: #006b4b;
 }
 
 .sidebar {
