--- a/BlazorApp1/_Imports.razor
+++ b/BlazorApp1/_Imports.razor
@@ -8,3 +8,9 @@
 @using Microsoft.JSInterop
 @using BlazorApp1
 @using BlazorApp1.Layout
+
+@using MudBlazor
+@using MudBlazor.Components
+@using MudBlazor.Extensions
+
+
